# fos

./: .gitignore  LICENSE  README.md  pyproject.toml
fos/: app.py
fos/components/: FileExplorer.py  SearchBox.py
fos/layout/: MainLayout.py  SidePanel.py
fos/styles/: main.tcss
