[tool.poetry]
name = "fos"
version = "0.1.0"
description = ""
authors = ["shubham"]
readme = "README.md"

[tool.poetry.scripts]
fos = "fos.app:app_cli"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.79.1"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
